# protocomm

./: .gitignore  CMakeLists.txt  README.md
c++/: .clangd  CMakeLists.txt
c++/cmake/: CMakeLists.txt  boost.cmake  protobuf.cmake
c++/include/protocomm/: async_call.h  channel.h  connection.h  method_hash.h  protobuf.h  protocomm.h  server.h  server_builder.h  server_context.h  service.h  status.h
c++/protoc/: CMakeLists.txt  generator.cpp  generator.hpp  generator_utils.cpp  generator_utils.hpp  plugin.cpp
c++/src/: CMakeLists.txt  channel.cc  frame.h  mpsc_queue.h  protobuf.cc  server.cc  server_builder.cc  server_impl.h  session.cc  session.h  transport.cc  transport.h
c++/tests/: CMakeLists.txt  gen_files.txt  main.cpp
go/: channel.go  compat_test.go  context.go  frame.go  frame_test.go  generate.sh  go.mod  hash.go  hash_test.go  integration_test.go  server.go  service.go  status.go  trace_test.go
go/example/: main.go
go/internal/testpb/: messages.go  wire.go
go/proto/example/: example.pb.go  example_protocomm.pb.go
go/proto/math/: calculator.pb.go  calculator_protocomm.pb.go
go/proto/messaging/: chat.pb.go  chat_protocomm.pb.go
go/protoc-gen-protocomm-go/: go.mod  main.go
go/prototrace/: prototrace.go
proto/: calculator.proto  chat.proto  example.proto
